--- a/prelim/symm-gs.tex
+++ b/prelim/symm-gs.tex
@@ -1,9 +1,17 @@
-In our ring signature we use as primitive Groth-Sahai proofs, which we have only instantiated in the SXDH setting. Since the SXDH (and DDH) is false in symmetric groups, in order to use Groth-Sahai proofs in symmetric groups one usually instantiates them using the $\lin{2}$ assumption. Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the $\lin{2}$ assumption, GS commitments are vectors in $\GG^3$ of the form
+The Groth Sahai (GS) proof system allows to prove satisfiability of a set of quadratic equations in a bilinear group. The admissible equation types must be in the following form:
+\begin{equation}\label{gseq}
+\sum_{j=1}^{m_y} f(\alpha_j, \vary_j)+\sum_{i=1}^{m_x} f(\varx_i, \beta_i)+\sum_{i=1}^{m_x} \sum_{j=1}^{m_y}  f(\varx_i,\escQE_{i,j} \vary_j)=t,
+\end{equation}
+ where $\boldsymbol \alpha  \in \Am_1^{m_y}$, $\boldsymbol \beta  \in \Am_2^{m_x}$, $\matr{\EscQE}=(\escQE_{i,j}) \in \Z_q^{m_x\times m_y}$, $t \in \Am_T$, and $\Am_1,\Am_2,\Am_T\in\{\Z_q,\GG_1,\GG_2,\GG_T\}$ 
+are equipped with some bilinear map $f:\Am_1\times \Am_2 \rightarrow \Am_T$.
+
+The GS proof system is a \emph{commit-and-prove} proof system, that is, one first commits to solutions
+of equation (\ref{gseq}) using the GS commitments, and the computes a proof that the commited values satisfies (\ref{gseq}).
+
+Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the $\lin{2}$ assumption, GS commitments are vectors in $\GG^3$ of the form
 $$
 \GS.\Com_{ck}([x];\vecb{r})=\pmatri{{[0]}\\{[0]}\\{[x]}}+r_1[\vecb{u}_1]+{r}_2[\vecb{u}_2]+r_3[\vecb{u}_3]
 $$
-where $ck:=([\vecb{u}_1]\cat[\vecb{u}_2][\vecb{u}_3])$, $(\vecb{u}_2\cat\vecb{u}_3)\gets\distlin_2$ and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$. Security of GS commitments follows from the hardness of the $\lin{2}$ assumption in symmetric groups.
-
-As consequence of the enlargement of commitments, proofs are also larger (for example, 9 group elements for pairing product equations). The form of the proofs is similar  to the asymmetric case (see Section \ref{sec:gs-proofs-scheme}), but we do not give the full detail since it does not help for understanding our ring signature nor for proving its security. 
+where $ck:=([\vecb{u}_1]\cat[\vecb{u}_2]\cat[\vecb{u}_3])$, $(\vecb{u}_2\cat\vecb{u}_3)\gets\distlin_2$ and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$. Security of GS commitments follows from the hardness of the $\lin{2}$ assumption in symmetric groups.
 
 
