--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -71,5 +71,11 @@
         \input{our-construction/construction}
 \bibliographystyle{abbrv}
 \bibliography{cryptobib/abbrev2,cryptobib/crypto,manualbib}
+
+\appendix
+
+\section{The Permutation Pairing Assumption in Asymmetric Groups}
+
+	\input{appendix/asymm-ppa}
 \end{document}
 
