--- a/intro/chandran.tex
+++ b/intro/chandran.tex
@@ -1,10 +1,11 @@
-Our scheme follows the ring signature of Chandran et al. Given a {Boneh-Boyen signature scheme} \cite{EC:BonBoy04a}, where the secret/verification keys are of the form $(sk,[vk])$,  $[vk]$ is an element of a symmetric bilinear group $\GG$ (of order $q$) whose discrete logarithm is $vk$, and $sk$ is equal to $vk$. The validity of a Boneh-Boyen signature $[\sigma]\in\GG$ of a message $m\in\Z_q$ under th verficiation $[vk]$ corresponds to the satisfiability of an equation $\mathsf{eq}([\sigma],[vk],m)$. Therefore, one can prove possession of a valid signature without revealing the signature using Groth-Sahai proofs.\cite{EC:GroSah08}\footnote{We assume here some familiarity with the Groth-Sahai proof system. We provide a description of Groth-Sahai proofs on Section \ref{sec:gs-proofs}}\footnote{We could replace the Boneh-Boyen signature scheme with any structure preserving signature scheme secure under milder assumptions (e.g.~\cite{EPRINT:JutRoy17}). We rather keep it simple and stick to Boneh-Boyen signature which, since the verification key is just one group element, simplifies the notation and reduces the size of the final signature.}  Given also a {one-time signature scheme}, the signature of the message $m$ for a ring $R=\{[vk_1],\ldots,[vk_n]\}$ is computed as follows:
+%!TeX root=../main_ring_signature.tex
+Our scheme follows the ring signature of Chandran et al. Consider a symmetric bilinear group $gk:=(\GG,\GG_T,e,\mathcal{P},q)$ of prime order $q$, where $\mathcal{P}$ is a generator. Define $[x]=x\mathcal{P}$ for any $x\in\mathbb{Z}_q$. Consider also a {Boneh-Boyen signature scheme} \cite{EC:BonBoy04a} whith secret/verification keys are of the form $(sk,[vk])$, where $sk$ is equal to $vk$. The validity of a Boneh-Boyen signature $[\sigma]\in\GG$ for a message $m\in\Z_q$ under the verification $[vk]$ corresponds to the satisfiability of an equation $\mathsf{eq}([\sigma],[vk],m)$ over the bilinear group. Thereby, one can prove possession of a valid signature, without revealing the signature, using Groth-Sahai proofs.\cite{EC:GroSah08}\footnote{We assume here some familiarity with the Groth-Sahai proof system. We provide a description of Groth-Sahai proofs on Section \ref{sec:gs-proofs}}\footnote{We could replace the Boneh-Boyen signature scheme with any structure preserving signature scheme secure under milder assumptions (e.g.~\cite{EPRINT:JutRoy17}). We rather keep it simple and stick to Boneh-Boyen signature which, since the verification key is just one group element, simplifies the notation and reduces the size of the final signature.}  Given also a {one-time signature scheme}, the signature of the message $m$ for a ring $R=\{[vk_1],\ldots,[vk_n]\}$ is computed as follows:
 \begin{itemize}
-\item[a)] pick a one-time signature key $(sk_\mathsf{ot},vk_\mathsf{ot})$, sign $m$ with the one-time signature, and sign the one-time verification key with $sk$,
-\item[b)] sign $vk_\mathsf{ot}$ using the Boneh-Boyen secret key $sk$ key and show possesion of valid signature of $vk_\mathsf{ot}$ under $[vk]$ using Groth-Sahai proofs,
-\item[c)] show that $[vk]\in R$.
+	\item[a)] Pick a one-time signature key $(sk_\mathsf{ot},vk_\mathsf{ot})$, sign $m$ with $sk_\mathsf{ot}$, and sign $vk_\mathsf{ot}$ with $sk$.
+	\item[b)] Show possession of valid signature of $vk_\mathsf{ot}$ under $[vk]$ using Groth-Sahai proofs.
+	\item[c)] Show that $[vk]\in R$.
 \end{itemize}
-The most costly part is c) and the core of Chandran et al.'s construction is a proof of size $\Theta(\sqrt[3]{n})$ of c) which we describe below.
+The most costly part is c) and the core of Chandran et al.'s construction is a proof of size $\Theta(\sqrt{n})$ of c) which we describe below.
  
 The proof arranges the set of verification keys on a matrix of size $m\times m$, where $m:=\sqrt{n}$, as depicted below
 $$
@@ -17,7 +18,7 @@ $$
 $$
 where $vk_{i,j}:=vk_{(i-1)m+j}$ for $i,j\in[m]$.
 
-Let $[vk_\alpha]$ the verification key for which the prover wants to show that $[vk_\alpha]\in R$ and let $i_\alpha,j_\alpha$ such that $vk_\alpha = vk_{i_\alpha,j_\alpha}$. The prover selects the $j_\alpha$ th column of $[\matr{V}]$ and then the $i_\alpha$ th element of that column is selected. To do so, the prover commits to 
+Let $[vk_\alpha]$ the verification key for which the prover wants to show that $[vk_\alpha]\in R$ and let $i_\alpha,j_\alpha$ such that $vk_\alpha = vk_{i_\alpha,j_\alpha}$. The prover selects the $j_\alpha$ th column of $[\matr{V}]$ and then the $i_\alpha$ th element of that column. To do so, the prover commits to 
 \begin{enumerate}
 \item $b_1,\ldots,b_m\in\bits$ such that $b_j=1$ iff $j=j_\alpha$,
 \item $b'_1,\ldots,b'_m\in\bits$ such that $b'_i=1$ iff $i=i_\alpha$,
@@ -27,8 +28,8 @@ Let $[vk_\alpha]$ the verification key for which the prover wants to show that $
 Using Groth-Sahai proofs, the prover proves that
 \begin{enumerate}[i.]
 \item $b_1(b_1-1)=0,\ldots,b_m(b_m-1)=0,b'_1(b'_m-1)=0,\ldots,b'_m(b'_m-1)=0$,\label{eq1}
-\item $\sum_{i=1}^m b_i =1$ and $\sum_{i=1}^m=1$,\label{eq2}
+\item $\sum_{i=1}^m b_i =1$ and $\sum_{i=1}^m b'_i=1$,\label{eq2}
 \item $[\kappa_1]=\sum_{j=1}^m b_j [vk_{1,j}],\ldots,[\kappa_m]=\sum_{j=1}^m b_j[vk_{m,j}]$,\label{eq3}
 \item $[vk_\alpha]=\sum_{i=1}^m b'_i[\kappa_i]$.\label{eq4}
 \end{enumerate}
-Thereby, equations \ref{eq1} and \ref{eq2} prove that $(b_1,\ldots,b_m)$ and $(b'_1,\ldots,b'_m)$ are unitary vectors, equation \ref{eq3} that $([\kappa_1],\ldots,[\kappa_m])^\top$ is a column of $[\matr{V}]$, and equation \ref{eq4} that $[vk_\alpha]$ is an element of $([\kappa_1],\ldots,[\kappa_m])$.
+Equations \ref{eq1} and \ref{eq2} prove that $(b_1,\ldots,b_m)$ and $(b'_1,\ldots,b'_m)$ are unitary vectors, equation \ref{eq3} that $([\kappa_1],\ldots,[\kappa_m])^\top$ is a column of $[\matr{V}]$, and equation \ref{eq4} that $[vk_\alpha]$ is an element of $([\kappa_1],\ldots,[\kappa_m])$.
