--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -1,21 +1,21 @@
 \subsubsection{Extending our technique.}
-A natural question is if this technique can be applied once again. That is, to compute a $\Theta(\sqrt[4]{n})$  proof, compute commitments to an element from $S=\{\sum_{i\in[m]}\vecb{a}_{i,1,1,1}[vk_{i,1,1,1}],\ldots,\sum_{i\in[m]}\vecb{a}_{i,m,m,m}[vk_{i,m,m,m}]\}$ and $S'=\allowbreak\{\sum_{i\in[m]}[\vecb{a}_{i,1,1,1}],\ldots,\sum_{i\in[m]}[\vecb{a}_{i,m,m,m}]\}$, and then prove that they belong to the respective sets with the proof of size $\Theta(\sqrt[3]{n})$. Since $|S|=|S'|=n^{3/4}$, proof will be of size $\Theta(\sqrt[3]{n^{3/4}})=\Theta(\sqrt[4]{n})$. However, this is not possible since the $\Theta(\sqrt[3]{n})$ proof is not a set membership proof for arbitrary sets, but only for sets where each element is of the form $([vk],\vecb{a}[vk],[\vecb{a}])$.
+A natural question is if this technique can be applied once again. That is, to compute a $\Theta(\sqrt[4]{n})$  proof, compute commitments to an element from $S=\{\sum_{i\in[m]}\vecb{a}_{i,1,1,1}[vk_{i,1,1,1}],\ldots,\sum_{i\in[m]}\vecb{a}_{i,m,m,m}[vk_{i,m,m,m}]\}$ and $S'=\allowbreak\{\sum_{i\in[m]}[\vecb{a}_{i,1,1,1}],\ldots,\sum_{i\in[m]}[\vecb{a}_{i,m,m,m}]\}$, and then prove that they belong to the respective sets with our set-membership proof of size $\Theta(\sqrt[3]{n})$. Since $|S|=|S'|=n^{3/4}$, proof will be of size $\Theta(\sqrt[3]{n^{3/4}})=\Theta(\sqrt[4]{n})$. However, this is not possible since the $\Theta(\sqrt[3]{n})$ proof is not a set-membership proof for arbitrary sets but only for sets where each element is of the form $([vk],\vecb{a}[vk],[\vecb{a}])$. Clearly, elements from $S$ and $S'$ do not have this form.
 
 
 \subsubsection{Erasures.}
-In the security proof we need to embed an instance of the $m$-permutation pairing assumption on the verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key, which amounts to reveal $\vecb{a}$ and is incompatible with the $m$-permutation pairing assumption. Since is not clear how to obliviously sample $[x]$ and $[x^{2}]$ and we can guess the set of corrupted parties only with negligible probability, we are forced to use erasures. That is, after sampling $\vecb{a}\gets\mathcal{Q}$ and computing $[\vecb{a}]$, the key generation algorithm erases $\vecb{a}$.
+In the security proof we need to embed an instance of the permutation pairing assumption on the verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key, which amounts to reveal $\vecb{a}$, the discrete logs of $[\vecb{a}]$, and is incompatible with the permutation pairing assumption. Since is not clear how to obliviously sample $[x]$ and $[x^{2}]$ and we can guess the set of corrupted parties only with negligible probability, we are forced to use erasures. That is, after sampling $\vecb{a}\gets\mathcal{Q}$ and computing $[\vecb{a}]$, the key generation algorithm erases $\vecb{a}$.
 
-\subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify the Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption and the pairing product equation. They showed that the statement ``$[\vecb{z}_1,\ldots,[\vecb{z}_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'' can be showed with a proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]]\}$ and that $\sum_{i=1}^m [\vecb{z}_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $O(m)$ proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1,\ldots,[\vecb{a}_m]]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
+\subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``$[\vecb{z}_1],\ldots,[\vecb{z}_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'' can be showed with a proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]]\}$ and that $\sum_{i=1}^m [\vecb{z}_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $\Theta(m)$ proof that $[\vecb{z}_1],\ldots,[\vecb{z}_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
 
 If we use Gonzalez et al.'s techniques we would have to show that $[\vecb{z}_1],\ldots,\allowbreak [\vecb{z}_m]\in\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$. However, since we can't reveal $j_\alpha,k_\alpha$, we need to commit to $\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$ and show that they are appropriately computed, which requires at lest $\Omega(m^2)$ group elements.
 
-We note that we are using features of the permutation pairing assumption that where ignored by Gonzalez et al.~and by Groth and Lu. Indeed, we used the fact that $\sum_{i=1}^m [\vecb{a}_{i,j_\alpha,k_\alpha}]$ ``defines'' the set $S_{j_\alpha,k_\alpha}:=\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$ in the sense that is all what we need to show membership in $S_{j_\alpha,k_\alpha}$. This feature allows us to select $S_{j_\alpha,k_\alpha}$ from $S$ using only $O(\sqrt[3]{n})$ group elements.
+We note that we are using features of the permutation pairing assumption that where ignored by Gonzalez et al.~and by Groth and Lu. Intuitively, we used the fact that $\sum_{i=1}^m [\vecb{a}_{i,j_\alpha,k_\alpha}]$ ``defines'' the set $S_{j_\alpha,k_\alpha}:=\{[\vecb{a}_{1,j_\alpha,k_\alpha}],\ldots,[\vecb{a}_{m,j_\alpha,k_\alpha}]\}$ in the sense that is all what we need to show membership in $S_{j_\alpha,k_\alpha}$. This feature allows us to select $S_{j_\alpha,k_\alpha}$ from $S$ using only $\Theta(\sqrt[3]{n})$ group elements.
 
 % TODO: chachar bien lo del deja-q
 %Chase and Meiklejohn constructed a framework for reducing the security of many $q$-type assumptions to the subgroup hiding assumption over composite order bilinear groups. The pairing fIf you are not willing to do it, let me know in the next few days.
 
 
 \subsubsection{Relation to \cite{AC:GonHevRaf15}.}
-Our construction is similar to the set membership proof from \cite{AC:GonHevRaf15}. However, the proof system from \cite{AC:GonHevRaf15} does not suffice for constructing a ring signature because there the CRS is fixed to a specific set and thus, the resulting ring signature will be fixed to a specific ring. 
+Our construction is similar to the set membership proof from \cite[Appendix D.2]{AC:GonHevRaf15}. However, the proof system from \cite{AC:GonHevRaf15} does not suffice for constructing a ring signature because there the CRS is fixed to a specific set and thus, the resulting ring signature will be fixed to a specific ring. 
 
 
