--- a/preamble.tex
+++ b/preamble.tex
@@ -306,6 +306,7 @@
 \newcommand{\negl}{\mathsf{negl}}
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\GG}{\mathbb{G}}
+\newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\Gr}{\ensuremath{\mathbb{G}_1}}
 \newcommand{\Hr}{\ensuremath{\mathbb{G}_2}}
 \newcommand{\T}{\ensuremath{\mathbb{T}}}
@@ -381,6 +382,7 @@ s_1 & \ldots & s_n\\
 
 \newcommand{\indexSet}[2]{\mathcal{I}_{#1,#2}}
 \newcommand{\SignaturesSet}{\mathcal{S}}
+\newcommand{\KGen}{\mathsf{KGen}}
 \newcommand{\Sign}{\mathsf{Sign}}
 \newcommand{\Ver}{\mathsf{Ver}}
 
