--- a/prelim/bb-signatures.tex
+++ b/prelim/bb-signatures.tex
@@ -1,6 +1,18 @@
-Boneh and Boyen described a short signature -- each signature consists of only one group element -- which is UF-CMA without random oracles \cite{EC:BonBoy04a}. Interestingly, the verification of the validity of any signature-message pair can be written as a set of pairing product equations. Thereby, using Groth-Sahai proofs one can show the possession of a valid signature without revealing the actual signature (as done in Chandran et al.'s ring signature and our ring signature).
+Boneh and Boyen introduce a short signature -- each signature consists of only one group element -- which is secure against existential forgery under weak chosen message attacks without random oracles \cite{EC:BonBoy04a}.
+The verification of the validity of any signature-message pair can be written as a set of pairing product equations. Thereby, using Groth-Sahai proofs one can show the possession of a valid signature without revealing the actual signature.
 
-The Boneh-Boyen signature is proven UF-CMA secure under the $m$-\emph{strong Diffie-Hellman} assumption, which is described below.
+\begin{definition}[weak Existential Unforgeability (wUF-CMA)] We say that a signature scheme $\Sigma = (\mathsf{KGen},\mathsf{Sign},\mathsf{Ver})$ is wUF-CMA if for any adversary $\advA$
+	$$
+	\Pr\left[\begin{array}{l}
+	gk \gets \ggen_s(1^\lambda), (m_1,\ldots,m_{q_\mathsf{sig}})\gets\advA(gk), (sk,vk)\gets\KGen(1^\lambda), \\
+	(m,\sigma)\gets\advA(\Sign_{sk}(m_1),\ldots,\Sign_{sk}(m_{q_\mathsf{sig}})):\\
+	\Ver_{pk}(m,\sigma)=1 \text{ and } m\notin \{m_1,\ldots,m_{q_\mathsf{sig}}\}
+	\end{array}\right]
+	$$
+is negligible in $\lambda$.
+\end{definition}
+
+The Boneh-Boyen signature is proven wUF-CMA secure under the $m$-\emph{strong Diffie-Hellman} assumption, which is described below.
 
 \begin{definition}[$m\mbox{-}SDH$ assumption]
 For any adversary $\advA$
