--- a/prelim/symm-gs.tex
+++ b/prelim/symm-gs.tex
@@ -1,4 +1,4 @@
-The Groth Sahai (GS) proof system allows to prove satisfiability of a set of quadratic equations in a bilinear group. The admissible equation types must be in the following form:
+The Groth Sahai (GS) proof system is a non-interactive witness indistinguishable proof system (and in some cases also zero-knowledge) for the language of quadratic equations over a bilinear group. The admissible equation types must be in the following form:
 \begin{equation}\label{gseq}
 \sum_{j=1}^{m_y} f(\alpha_j, \vary_j)+\sum_{i=1}^{m_x} f(\varx_i, \beta_i)+\sum_{i=1}^{m_x} \sum_{j=1}^{m_y}  f(\varx_i,\escQE_{i,j} \vary_j)=t,
 \end{equation}
@@ -6,12 +6,14 @@ The Groth Sahai (GS) proof system allows to prove satisfiability of a set of qua
 are equipped with some bilinear map $f:\Am_1\times \Am_2 \rightarrow \Am_T$.
 
 The GS proof system is a \emph{commit-and-prove} proof system, that is, one first commits to solutions
-of equation (\ref{gseq}) using the GS commitments, and the computes a proof that the commited values satisfies (\ref{gseq}).
+of equation (\ref{gseq}) using the GS commitments, and the computes a proof that the committed values satisfies equation (\ref{gseq}).
 
-Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the $\lin{2}$ assumption, GS commitments are vectors in $\GG^3$ of the form
-$$
-\GS.\Com_{ck}([x];\vecb{r})=\pmatri{{[0]}\\{[0]}\\{[x]}}+r_1[\vecb{u}_1]+{r}_2[\vecb{u}_2]+r_3[\vecb{u}_3]
-$$
-where $ck:=([\vecb{u}_1]\cat[\vecb{u}_2]\cat[\vecb{u}_3])$, $(\vecb{u}_2\cat\vecb{u}_3)\gets\distlin_2$ and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$. Security of GS commitments follows from the hardness of the $\lin{2}$ assumption in symmetric groups.
+GS proofs are perfectly sound when the CRS is sampled from the perfectly binding distribution, and perfectly witness-indistinguishable when sampled from the perfectly hiding distribution. Computational indistinguishability of  both distribution implies either perfect soundness and computational witness indistinguishability or computational soundness and perfect witness-indistinguishability.
 
-
+\subsubsection{Groth-Sahai Commitments.}
+Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the  DLin assumption, GS commitments are vectors in $\GG^3$ of the form
+\begin{align*}
+&\GS.\Com_{ck}([x];\vecb{r}):=\pmatri{{[0]}\\{[0]}\\{[x]}}+r_1[\vecb{u}_1]+{r}_2[\vecb{u}_2]+r_3[\vecb{u}_3]\\
+&\GS.\Com_{ck}(x;\vecb{r}):=x\left([\vecb{u}_1]+\pmatri{{[0]}\\{[0]}\\{[1]}}\right)+{r}_1[\vecb{u}_2]+r_2[\vecb{u}_3]
+\end{align*}
+where $ck:=([\vecb{u}_1]\cat[\vecb{u}_2]\cat[\vecb{u}_3])$, $(\vecb{u}_2\cat\vecb{u}_3)=\matr{A}$, and $\matr{A}$ is the matrix from definition \ref{def:dlin}. The GS reference string is the commitment key $ck$  and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$.
